--- a/practicas.html
+++ b/practicas.html
@@ -12,6 +12,22 @@
 let variable = 'variable creada con let'
 const constante = 'este valor es constante'
 console.log(miVariable)
+
+
+function Fn(){
+    this.prop = 'propiedad'
+    
+}
+
+const fatFn = () => {
+    const obj = {}
+    obj.prop = 'propiedad'
+    return obj
+}
+const r1 = fatFn()
+const r = new Fn()
+//console.log(r);
+//console.log(r1);
     </script>
 </body>
 </html>
